RESOLVED FIXED90474
IndexedDB: A null or undefined storeNames argument to IDBDatabase::transaction() should be coerced to string
https://bugs.webkit.org/show_bug.cgi?id=90474
Summary IndexedDB: A null or undefined storeNames argument to IDBDatabase::transactio...
Joshua Bell
Reported 2012-07-03 10:35:34 PDT
IndexedDB: A null or undefined storeNames argument to IDBDatabase::transaction() should be coerced to string
Attachments
Patch (5.50 KB, patch)
2012-07-03 10:36 PDT, Joshua Bell
no flags
Patch (7.20 KB, patch)
2012-07-09 10:12 PDT, Joshua Bell
no flags
Patch for landing (7.64 KB, patch)
2012-07-09 16:26 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-07-03 10:36:00 PDT
Joshua Bell
Comment 2 2012-07-03 18:42:17 PDT
Comment on attachment 150640 [details] Patch Whoops, got uploaded with no changelog.
Joshua Bell
Comment 3 2012-07-09 10:12:44 PDT
Joshua Bell
Comment 4 2012-07-09 10:15:33 PDT
alecflett@, dgrogan@ - please take a look.
David Grogan
Comment 5 2012-07-09 14:03:00 PDT
Comment on attachment 151266 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151266&action=review LGTM > LayoutTests/storage/indexeddb/resources/transaction-basics.js:289 > + debug("Test that null and undefined are treated as strings"); Could you add a couple of evalAndExpectException lines in here for transaction = db.transaction(null/undefined)?
Joshua Bell
Comment 6 2012-07-09 16:26:30 PDT
Created attachment 151348 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-07-09 17:48:26 PDT
Comment on attachment 151348 [details] Patch for landing Clearing flags on attachment: 151348 Committed r122173: <http://trac.webkit.org/changeset/122173>
WebKit Review Bot
Comment 8 2012-07-09 17:48:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.