IndexedDB: A null or undefined storeNames argument to IDBDatabase::transaction() should be coerced to string https://bugs.webkit.org/show_bug.cgi?id=90474

Reviewed by Tony Chang.

Source/WebCore:

Test: storage/indexeddb/transaction-basics.html

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::transaction):
* Modules/indexeddb/IDBDatabase.idl:

LayoutTests:

* storage/indexeddb/resources/transaction-basics.js:
(testInvalidMode):
(testDegenerateNames.request.onsuccess):
(testDegenerateNames.verifyDegenerateNames):
(testDegenerateNames):
* storage/indexeddb/transaction-basics-expected.txt:


Canonical link: https://commits.webkit.org/108665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122173 268f45cc-cd09-0410-ab3c-d52691b4dbfc